// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build typesMetadata from a raw WebActionMetadata generate multiple top level fields 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "15",
      "16",
      "17",
      "18",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "15": Object {
    "id": "15",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 1",
    "repeated": false,
    "serverType": "Double",
    "typescriptType": "number",
  },
  "16": Object {
    "id": "16",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 2",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
  "17": Object {
    "id": "17",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 3",
    "repeated": false,
    "serverType": "Long",
    "typescriptType": "number",
  },
  "18": Object {
    "id": "18",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Field 4",
    "repeated": false,
    "serverType": "Short",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata generateNested 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "2",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "2": Object {
    "id": "2",
    "idChildren": Immutable.OrderedSet [
      "3",
    ],
    "idParent": "0",
    "name": "Nested Int Field",
    "repeated": false,
    "serverType": "noRepeatedInt",
    "typescriptType": null,
  },
  "3": Object {
    "id": "3",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "2",
    "name": "Int Field",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata generateNoNested 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "1",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "1": Object {
    "id": "1",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "0",
    "name": "Int Field",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata generateNonTypedGET 1`] = `Immutable.OrderedMap {}`;

exports[`Build typesMetadata from a raw WebActionMetadata generateNonTypedPOST 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "id": "0",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "",
    "name": "",
    "repeated": false,
    "serverType": "JSON",
    "typescriptType": "string",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata generateRepeated 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "4",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "4": Object {
    "id": "4",
    "idChildren": Immutable.OrderedSet [
      "5",
    ],
    "idParent": "0",
    "name": "Repeated Double Field",
    "repeated": true,
    "serverType": "Double",
    "typescriptType": null,
  },
  "5": Object {
    "id": "5",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "4",
    "name": "Repeated Double Field",
    "repeated": false,
    "serverType": "Double",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata generateRepeatedNested 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "6",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "6": Object {
    "id": "6",
    "idChildren": Immutable.OrderedSet [
      "7",
    ],
    "idParent": "0",
    "name": "Repeated Nested Int Field",
    "repeated": true,
    "serverType": "nestedNoRepeatedInt",
    "typescriptType": null,
  },
  "7": Object {
    "id": "7",
    "idChildren": Immutable.OrderedSet [
      "8",
    ],
    "idParent": "6",
    "name": "Repeated Nested Int Field",
    "repeated": false,
    "serverType": "nestedNoRepeatedInt",
    "typescriptType": null,
  },
  "8": Object {
    "id": "8",
    "idChildren": Immutable.OrderedSet [
      "9",
    ],
    "idParent": "7",
    "name": "Nested Int Field",
    "repeated": false,
    "serverType": "noRepeatedInt",
    "typescriptType": null,
  },
  "9": Object {
    "id": "9",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "8",
    "name": "Int Field",
    "repeated": false,
    "serverType": "Int",
    "typescriptType": "number",
  },
}
`;

exports[`Build typesMetadata from a raw WebActionMetadata generateRepeatedNestedRepeated 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "10",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "10": Object {
    "id": "10",
    "idChildren": Immutable.OrderedSet [
      "11",
    ],
    "idParent": "0",
    "name": "Nested Repeated Double Field",
    "repeated": true,
    "serverType": "nestedRepeatedDouble",
    "typescriptType": null,
  },
  "11": Object {
    "id": "11",
    "idChildren": Immutable.OrderedSet [
      "12",
    ],
    "idParent": "10",
    "name": "Nested Repeated Double Field",
    "repeated": false,
    "serverType": "nestedRepeatedDouble",
    "typescriptType": null,
  },
  "12": Object {
    "id": "12",
    "idChildren": Immutable.OrderedSet [
      "13",
    ],
    "idParent": "11",
    "name": "Nested Double Field",
    "repeated": false,
    "serverType": "repeatedDouble",
    "typescriptType": null,
  },
  "13": Object {
    "id": "13",
    "idChildren": Immutable.OrderedSet [
      "14",
    ],
    "idParent": "12",
    "name": "Repeated Double Field",
    "repeated": true,
    "serverType": "Double",
    "typescriptType": null,
  },
  "14": Object {
    "id": "14",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "13",
    "name": "Repeated Double Field",
    "repeated": false,
    "serverType": "Double",
    "typescriptType": "number",
  },
}
`;
